# vnpy-chart

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
tests/: data.py  indicator.py  test_data.csv  test_widget.py
vnpy_chart/: __init__.py  item.py  widget.py
vnpy_chart/items/: __init__.py  candle_item.py  chart_item.py  icon_item.py  line_item.py  utils.py  volume_item.py
