[metadata]
name = vnpy_chart
version = attr: vnpy_chart.__version__
url = https://github.com/suyu0925/vnpy_chart
license = MIT
author = suyu0925
author_email = suyu0925@gmail.com
description = enhanced chart for vnpy.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS    
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12    
    Topic :: Office/Business :: Financial :: Investment
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
python_requires = >=3.10

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    vnpy

[options.package_data]
vnpy_chart =
    assets/*
